--- a/public/admin/css/custom-extra.css
+++ b/public/admin/css/custom-extra.css
@@ -1,3 +1,21 @@
 .image-category {
     width: 100px;
 }
+
+.form-select {
+    display: block;
+    width: 25%;
+    padding: .5rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    background-color: antiquewhite;
+    background-repeat: no-repeat;
+    background-position: right .75rem center;
+    background-size: 16px 12px;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    -webkit-appearance: none;
+    appearance: none;
+}
