--- a/public/admin/css/custom-extra.css
+++ b/public/admin/css/custom-extra.css
@@ -5,13 +5,13 @@
 
 .form-select {
     display: block;
-    width: 25%;
+    width: 100%;
     padding: .5rem;
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
     color: #212529;
-    background-color: antiquewhite;
+    background-color: rgb(255, 255, 255);
     background-repeat: no-repeat;
     background-position: right .75rem center;
     background-size: 16px 12px;
@@ -19,4 +19,17 @@
     border-radius: .25rem;
     -webkit-appearance: none;
     appearance: none;
+}
+.ord-details label {
+    font-size: 0.9rem;
+    font-weight: 600;
+}
+.ord-details div {
+    font-size: 0.9rem;
+    padding: 0.4rem;
+}
+
+.header-h{
+    background-color: rgb(148, 67, 223) !important;
+    color: white !important;
 }
