--- a/public/frontend/css/custom.css
+++ b/public/frontend/css/custom.css
@@ -44,11 +44,11 @@ a {
     padding: 0.4rem;
 }
 .colour {
-    background-color:rgba(0, 128, 255, 0.883);
+    background-color: rgba(0, 128, 255, 0.883);
     color: white;
 }
-.war-text{
-    color: red !important;;
+.war-text {
+    color: red !important;
 }
 /* rating */
 .rating-css div {
@@ -59,26 +59,36 @@ a {
     text-align: center;
     text-transform: uppercase;
     padding: 20px 0;
-  }
-  .rating-css input {
+}
+.rating-css input {
     display: none;
-  }
-  .rating-css input + label {
+}
+.rating-css input + label {
     font-size: 60px;
     text-shadow: 1px 1px 0 #8f8420;
     cursor: pointer;
-  }
-  .rating-css input:checked + label ~ label {
+}
+.rating-css input:checked + label ~ label {
     color: #b4afaf;
-  }
-  .rating-css label:active {
+}
+.rating-css label:active {
     transform: scale(0.8);
     transition: 0.3s ease;
-  }
+}
 
 /* End of Star Rating */
 
-.checked
-{
+.checked {
     color: #ffe400;
+}
+.whatsapp-chat {
+    bottom: 10px;
+    left: 10px;
+    position: fixed;
+}
+.write-des
+{
+    height: 10ch;
+    overflow: auto;
+    text-overflow: ellipsis;
 }
